--- a/Accueil/mandal.css
+++ b/Accueil/mandal.css
@@ -3,6 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --blue:#287bff;
+    --white:#fff;
+    --grey:#f5f5f5;
+    --black1:#222;
+    --black2: #999;
+
+
+}
 .modalContener{
     height: 100vh;
     width: 100vw;
@@ -48,7 +57,7 @@
 }
 .modalContener.active .modal{
     opacity: 1;
-    transition: opacity 0.4s 0.2s ease-out;
+       
 
 }
 
@@ -95,4 +104,51 @@
     color: #fff;
     font-weight: bold;
 }
+/*.modalAjoutNote {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    z-index:1;
+    left: 68%;
+    top: 12%;
+    visibility: hidden;
+    
+
+}
+.modalAjoutNote .matiere{
+    display: flex;
+    flex-direction: column;
+    border: solid 1px black;
+    border-radius: 10px;
+    background-color: var(--grey);
+}
+
+.modalAjoutNote .matiere #ajouter{
+    background-color: #04D939;
+    margin-top: 5px;
+} 
+.modalAjoutNote .matiere h3{
+    text-align: center;
+}
+.modalAjoutNote.afficher{
+    visibility: visible;
+}*/
+
+td .matiere{
+    display: flex;
+    flex-direction: column;
+    border: solid 1px black;
+    border-radius: 10px;
+    background-color: var(--grey);
+    width: 100%;
+}
+td .matiere h3{
+    text-align: center;
+}
+ .afficher{
+    visibility: hidden;
+}
+
+
+
 
