--- a/Accueil/Style.css
+++ b/Accueil/Style.css
@@ -15,6 +15,10 @@
 
 
 }
+.tittle{
+    font-size: 1.3em;
+    font-weight: 500;
+}
 body{
     min-height: 100vh;
     overflow-x:hidden ;
@@ -364,12 +368,13 @@ body{
 }
 .tabledematiere .content table tr{
     color: var(--black1);
-    border-bottom: 1px solid rgba(0, 0,0,0.1);
+    border-bottom: 1px solid rgba(0, 0,0,0.1); 
+}
+.addNotes{
     cursor: pointer;
 }
-.tabledematiere .content table tr:last-child{
-    border-bottom: none;
-}
+
+
 .tabledematiere .content table tr td{
     padding: 20px;
 }
