--- a/Accueil/mandal.css
+++ b/Accueil/mandal.css
@@ -12,6 +12,7 @@
 
 
 }
+
 .modalContener{
     height: 100vh;
     width: 100vw;
@@ -104,35 +105,7 @@
     color: #fff;
     font-weight: bold;
 }
-/*.modalAjoutNote {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    z-index:1;
-    left: 68%;
-    top: 12%;
-    visibility: hidden;
-    
 
-}
-.modalAjoutNote .matiere{
-    display: flex;
-    flex-direction: column;
-    border: solid 1px black;
-    border-radius: 10px;
-    background-color: var(--grey);
-}
-
-.modalAjoutNote .matiere #ajouter{
-    background-color: #04D939;
-    margin-top: 5px;
-} 
-.modalAjoutNote .matiere h3{
-    text-align: center;
-}
-.modalAjoutNote.afficher{
-    visibility: visible;
-}*/
 
 td .matiere{
     display: flex;
@@ -141,13 +114,23 @@ td .matiere{
     border-radius: 10px;
     background-color: var(--grey);
     width: 100%;
+    visibility: hidden;
+    z-index: 1;
 }
 td .matiere h3{
     text-align: center;
+    
 }
- .afficher{
-    visibility: hidden;
+ .matiere.afficher{
+    visibility: visible;
+    
 }
+#MoyenneMath{
+    position: absolute;
+    margin-left: 103px;
+    margin-top: 45px;
+}
+
 
 
 
