--- a/Style.css
+++ b/Style.css
@@ -275,13 +275,12 @@ body{
     font-weight: bold;
 }
 #nouveauMatiere #enregistrer{
-    text-align: center;
+    padding: 8px;
     background-color: #4DFF00;
-    text-align: center;
     color: #fff;
     cursor: pointer;
     height: 50px;
-    font-size: 1.75em;
+    font-size: 1.50em;
     font-weight: bold;
 }
 
